# superglue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  android.cmake  config.json.example  iOS.cmake  run_djinni.sh
cmake/: BuildExternal.cmake  DownloadCURL.cmake  DownloadDummy.cmake  DownloadHeaderOnlyDummy.cmake  DownloadJSON.cmake  DownloadJsonCpp.cmake  DownloadOpenSSL.cmake  DownloadPJSIP.cmake  DownloadSQLite3.cmake  ModuleBlueCast.cmake  ModuleCommon.cmake  ModuleInclude.cmake  ModuleJIT.cmake  android.cmake  script-from-string.cmake.in
cmake/patch/: configure-android.patch  curl.patch  pj_config.patch  pj_config_site.h
console/: CMakeLists.txt  TMan.h  pack.cpp  pack.h  quest.cpp  quest.h  tman.cpp  uuid.h  vm.c  vm.h
djinni/src/: run
jni/: CMakeLists.txt  djinni_main.cpp
kitty/: CMakeLists.txt  KittyConfig.cmake.in  KittyConfigVersion.cmake.in  README.md
kitty/kitty/blueth/: CMakeLists.txt  ble.cpp  ble.h  ble_profile.cpp  blue_client.cpp  blue_client.h  blue_stream.cpp  blue_stream.h  blueth.h  bluetooth.cpp  uuid.c  uuid.h
kitty/kitty/err/: CMakeLists.txt  err.cpp  err.h
kitty/kitty/file/: CMakeLists.txt  file.h  io_stream.cpp  io_stream.h  tcp.cpp  tcp.h
kitty/kitty/log/: CMakeLists.txt  log.cpp  log.h
kitty/kitty/server/: CMakeLists.txt  proxy.h  server.cpp  server.h  tcp_client.h
kitty/kitty/ssl/: CMakeLists.txt  ssl.cpp  ssl.h  ssl_client.cpp  ssl_client.h  ssl_stream.cpp  ssl_stream.h
kitty/kitty/util/: CMakeLists.txt  auto_run.h  iterator.h  move_by_copy.h  optional.h  set.h  string.h  task_pool.h  template_helper.h  thread_local.h  thread_pool.h  thread_t.h  utility.h  utils.cpp
modules/: .gitignore  settings.gradle
modules/bluecast/: build.gradle
modules/bluecast/djinni/: blue.djinni
modules/bluecast/native/cpp/: blue_view_display.cpp  blue_view_display.h  blue_view_main.cpp  blue_view_main.h  bluecast.cpp  bluecast.h
modules/bluecast/src/androidTest/java/com/loki/superglue/djinni/bluecast/: ExampleInstrumentedTest.java
modules/bluecast/src/main/: AndroidManifest.xml
modules/bluecast/src/main/java/com/loki/superglue/djinni/bluecast/: BlueApplication.java  Bluetooth.java  SuperGlueBlueCast.java
modules/bluecast/src/main/java/com/loki/superglue/djinni/bluecast/gatt/: DescriptorBind.java  GattBind.java  GattCharacteristicBind.java  GattServiceBind.java
modules/bluecast/src/main/res/values/: strings.xml
modules/bluecast/src/test/java/com/loki/superglue/djinni/bluecast/: ExampleUnitTest.java
modules/bluecast/xcodeproj/Bluecast/Bluecast/: BlueController.swift  Bluecast.h  Bluecast.swift  Info.plist  uBlueController.swift
modules/bluecast/xcodeproj/Bluecast/Bluecast.xcodeproj/: project.pbxproj
modules/bluecast/xcodeproj/Bluecast/Bluecast.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
modules/bluecast/xcodeproj/Bluecast/Bluecast.xcodeproj/project.xcworkspace/xcuserdata/petra.xcuserdatad/: UserInterfaceState.xcuserstate
modules/bluecast/xcodeproj/Bluecast/Bluecast.xcodeproj/xcuserdata/petra.xcuserdatad/xcschemes/: xcschememanagement.plist
modules/bluecast/xcodeproj/Bluecast/Bluecast/Gatt/: GattBind.swift  GattCharacteristic.swift  GattDescriptor.swift  GattService.swift
modules/common/: README.md  build.gradle  proguard-rules.pro
modules/common/djinni/: config.djinni  file.djinni  log.djinni  permission.djinni  thread.djinni
modules/common/native/cpp/: config.cpp  config.hpp  permission.cpp  permission.h  task_pool.h  thread_t.hpp
modules/common/src/androidTest/java/com/loki/superglue/djinni/common/: ApplicationTest.java
modules/common/src/main/: AndroidManifest.xml
modules/common/src/main/java/com/loki/superglue/djinni/common/: PermImpl.java  SuperGlueCommon.java
modules/common/src/main/java/com/loki/superglue/djinni/common/activity/: CommonActivity.java
modules/common/xcodeproj/: FileImpl.swift
modules/common/xcodeproj/Common/: Common.h  FileImpl.h  FileImpl.mm  FileImpl.swift  Info.plist  LogImpl.h  LogImpl.mm  LogImpl.swift  PermImpl.h  PermImpl.m  PermImpl.swift  SuperglueCommon.swift  ThreadImpl.h  ThreadImpl.mm  ThreadImpl.swift  superglue_common.mm
modules/common/xcodeproj/Common.xcodeproj/: project.pbxproj
modules/common/xcodeproj/CommonTests/: CommonTests.m  Info.plist
modules/gradle/wrapper/: gradle-wrapper.properties
modules/jit/: build.gradle
modules/jit/djinni/: jit.djinni
modules/jit/native/cpp/: jit.cpp  jit.hpp
modules/jit/src/androidTest/java/com/loki/superglue/djinni/jit/: ApplicationTest.java
modules/jit/src/main/: AndroidManifest.xml
modules/jit/src/main/java/com/loki/superglue/djinni/jit/: JITActivity.java  SuperGlueJIT.java
modules/jit/src/main/res/layout/: activity_jit.xml
modules/jit/src/main/res/menu/: menu_jit.xml
modules/jit/src/main/res/values/: strings.xml
objc/: CMakeLists.txt
src/: CMakeLists.txt
wrappers/curl/: curl.cpp  curl.hpp
wrappers/pjsip/: dns_resolv.cpp  dns_resolv.h  ice_trans.cpp  ice_trans.h  io_queue.cpp  io_queue.h  nath.cpp  nath.h  pool.cpp  pool.h  timer_heap.cpp  timer_heap.h
wrappers/sodium/: sodium.cpp  sodium.hpp
wrappers/sqlite3/: sqlite3.cpp  sqlite3.hpp
